# ocla

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
jupyter/: example.ipynb
ocla/: __init__.py  calibration.py  calibration_test.py  confidence.py  confidence_test.py  models.py  models_test.py  utilities.py  utilities_test.py
