[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ocla"
description = "Ordinal Confidence Level Assignment for Regression Model Predictions"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
dependencies = [
    "docopt",
    "numpy",
    "pandas",
    "pyarrow",
    "rdkit",
    "scikit-learn >= 1.5.1",
    "tqdm",
]
requires-python = ">= 3.10"
authors = [
    {name = "Steven Kearnes", email = "skearnes@relaytx.com"},
]

[tool.setuptools.packages.find]
include = ["ocla"]

[project.optional-dependencies]
examples = [
    "jupyterlab",
    "seaborn",
]
tests = [
    "black[jupyter]",
    "pylint",
    "pytest",
    "pytype",
    "treon",
]

[project.urls]
Repository = "https://github.com/skearnes/ocla"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.basic]
docstring-min-length = 3

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation",
    "no-member",
    "no-name-in-module",
    "too-many-arguments",
    "too-many-locals",
]

[tool.pytype]
inputs = ["*.py", "ocla"]
exclude = ["**/*_test.py", "build/", "dist/"]
keep_going = true
jobs = 0

[tool.setuptools_scm]
version_file = "ocla/__version__.py"
